# gcc

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  SKILL.md  TASKS.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-build-push.yml  release.yml
docs/: audit-verification-runbook.md  deployment.md  implementation-plan.md  installation.md  mcp-best-practices-mapping.md  mcp-inspector-runbook.md  onboarding.md  production-readiness-checklist.md  security-model.md  timeout-triage-runbook.md
eval/: gcc_mcp_evaluation.xml
src/gcc_mcp/: __init__.py  __main__.py  audit.py  auth.py  cli.py  constants.py  engine.py  errors.py  file_manager.py  limits.py  models.py  runtime.py  server.py
tests/: test_audit.py  test_auth.py  test_cli.py  test_engine.py  test_limits.py  test_server.py  test_server_compat.py  test_server_tools.py
